Implement resampling of WAV files (And eliminate compilation warnings).